fix: 198 broken border (#291)
* fix: disable box shadow when scrollbar appears

* fix: fix styles for side menu

* fix: replace hardcoded prefix

---------

--- a/frontend/src/components/PanelSectionName/styles.scss
+++ b/frontend/src/components/PanelSectionName/styles.scss
@@ -1,5 +1,5 @@
 @use '../../theme/variables.scss' as vars;
-@use '../../theme/colors.scss' as colors;
+@use '@carbon/type';
 
 .panel-section,
 .panel-section-light {
@@ -7,23 +7,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0.9375rem 1rem;
-  background: var(--bcgov-background-left-panel);
-  box-shadow: inset -1px 0 0 colors.$gray-20;
+  padding: 0.94rem 1rem;
+  background: var(--#{vars.$bcgov-prefix}-background-left-panel);
 }
 
 .panel-section-light {
-  background: var(--bcgov-layer-02);
+  background: var(--#{vars.$bcgov-prefix}-layer-02);
 }
 
 .panel-section > span,
 .panel-section-light > span {
-  font-family: 'BC Sans', 'IBM Plex Sans', sans-serif;
-  font-style: normal;
-  font-size: 0.75rem;
-  font-weight: 400;
-  line-height: 1rem;
-  letter-spacing: 0.02rem;
-  color: var(--#{vars.$bcgov-prefix}-text-secondary);
+  @include type.type-style('label-01');
   user-select: none;
 }
